fix(view): Fixing 100% width bug on small screens with terradata components.

--- a/src/app/shared/components/main/main.component.scss
+++ b/src/app/shared/components/main/main.component.scss
@@ -5,3 +5,8 @@ steak-main{
 
   }
 }
+td-layout-nav {
+  .content.md-content{
+    width:100%;
+  }
+}
